[tool.poetry]
name = "llm_chatbot"
version = "0.1.0"
description = ""
authors = ["jonasbechthold <jonas.bechthold@datadrivers.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
chromadb = "^0.3.26"
langchain = "0.1.0"
sentence-transformers = "^2.2.2"
tiktoken = "^0.4.0"
accelerate = "^0.20.3"
bitsandbytes = "^0.39.1"
protobuf = "3.20.2"
starlette = "0.27.0"

[tool.poetry.scripts]
protobuf-python-implementation = "export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
